fixing the image from project container when the mouse is upon the image, this collapse

--- a/Styles/common_items.css
+++ b/Styles/common_items.css
@@ -105,3 +105,12 @@ div .mainTitle-text{
     color: #E04136;
 }
 
+.subTitles h2 {
+    font-size: 45px;
+    font-family: "Roboto Slab", serif;
+    font-weight: 800;
+    color: #e23917;
+    text-align: center;
+    margin-top: 8vh;
+}
+
